[gd_scene load_steps=15 format=3 uid="uid://c76or3qn4nag5"]

[ext_resource type="SpriteFrames" uid="uid://dla6duj6yja06" path="res://Player/Animations/player.tres" id="1_07klf"]
[ext_resource type="Script" uid="uid://rvhup4o0a6sb" path="res://Player/Model/Player.gd" id="1_nq1va"]
[ext_resource type="AudioStream" uid="uid://dgcps7xtdmdry" path="res://Player/Audio/PlayerJump.mp3" id="3_uexeo"]
[ext_resource type="PackedScene" uid="uid://gk5hu7ibrphb" path="res://Components/HealthComponent.tscn" id="3_vjkck"]
[ext_resource type="Material" uid="uid://b56yaekgctmcq" path="res://Art Assets/Environment/Materials/shaders/HitFlash.tres" id="4_3680f"]
[ext_resource type="PackedScene" uid="uid://clurdw1xfhx5s" path="res://Components/HitboxComponent.tscn" id="4_b7dwa"]
[ext_resource type="AudioStream" uid="uid://8ml3kqab0xkm" path="res://Player/Audio/PlayerStep.mp3" id="5_6g8sp"]
[ext_resource type="PackedScene" uid="uid://dk1oymk1i2vh5" path="res://Art Assets/Effects/hitflashanimation.tscn" id="7_mbhvf"]
[ext_resource type="AudioStream" uid="uid://ct3wcnxuf5re5" path="res://Player/Audio/PlayerDamage.mp3" id="8_bwk5w"]
[ext_resource type="PackedScene" uid="uid://bnikcfrbgmvpv" path="res://Player/Audio/sfx_hit.tscn" id="9_gmce5"]
[ext_resource type="PackedScene" uid="uid://csxhdjx7y84og" path="res://Enemies/Universal Scenes/MeleeAttack.tscn" id="11_ujdnk"]

[sub_resource type="CylinderMesh" id="CylinderMesh_udf64"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_nq1va"]
radius = 0.30517578
height = 2.0968018

[sub_resource type="SphereShape3D" id="SphereShape3D_gdyl3"]
radius = 2.3237813

[node name="Player" type="CharacterBody3D" node_paths=PackedStringArray("hitbox", "attack_stats")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9937761, 0)
collision_mask = 15
safe_margin = 0.01
script = ExtResource("1_nq1va")
speed = 15
hitbox = NodePath("HitboxComponent")
attack_stats = NodePath("MeleeAttack")
step_sfx = ExtResource("5_6g8sp")
jump_sfx = ExtResource("3_uexeo")

[node name="PlayerSprite3D" type="AnimatedSprite3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(5, 0, 0, 0, 5, 0, 0, 0, 5, 0, 1.3887637, 0)
layers = 3
material_override = ExtResource("4_3680f")
gi_mode = 2
shaded = true
alpha_cut = 2
texture_filter = 0
sprite_frames = ExtResource("1_07klf")
animation = &"jump"

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.9061307, 0.42299786, 0, -0.42299786, 0.9061307, 0, 6.7370896, 13.814444)
fov = 37.849285

[node name="SpotLight3D" type="SpotLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, 1, 0, -1, -4.371139e-08, 0, 5.2671537, 0.6693473)
light_color = Color(0.9790618, 0.7673883, 0.5856188, 1)
light_energy = 6.0
shadow_enabled = true
shadow_caster_mask = 4294966784
spot_range = 9.791233
spot_angle = 77.93637

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.06, 0, 0, 0, 1, 0, -0.8032678, 0)
layers = 512
cast_shadow = 3
gi_mode = 2
mesh = SubResource("CylinderMesh_udf64")

[node name="HealthComponent" parent="." instance=ExtResource("3_vjkck")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.0037313, 0)
MAX_HEALTH = 100

[node name="HitboxComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("4_b7dwa")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.0037313, 0)
health_component = NodePath("../HealthComponent")

[node name="PlayerShape3D" type="CollisionShape3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.050156355, 0)
shape = SubResource("CapsuleShape3D_nq1va")

[node name="footstep_player" type="AudioStreamPlayer3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.8747468, 0)
stream = ExtResource("5_6g8sp")
volume_db = 43.429
bus = &"SFX"

[node name="jump_player" type="AudioStreamPlayer3D" parent="."]
unique_name_in_owner = true
stream = ExtResource("3_uexeo")

[node name="sfx_player" type="AudioStreamPlayer3D" parent="."]
unique_name_in_owner = true
stream = ExtResource("3_uexeo")
unit_size = 7.0
max_polyphony = 5
bus = &"SFX"

[node name="dmg_player" type="AudioStreamPlayer3D" parent="."]
unique_name_in_owner = true
stream = ExtResource("8_bwk5w")
volume_db = 3.721

[node name="sfx_hit" parent="." instance=ExtResource("9_gmce5")]
unique_name_in_owner = true
max_polyphony = 5
bus = &"SFX"

[node name="hitflashanimation" parent="." instance=ExtResource("7_mbhvf")]
unique_name_in_owner = true
speed_scale = 2.0

[node name="RayCast3D" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.38429534, -0.9232102, 0, 0.9232102, 0.38429534, 0, 6.7370896, 13.814444)

[node name="MeleeAttack" parent="." instance=ExtResource("11_ujdnk")]
collision_layer = 2
collision_mask = 2
damage = 1.0
attack_cooldown = 2.5

[node name="CollisionShape3D" type="CollisionShape3D" parent="MeleeAttack"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9026427, 0)
shape = SubResource("SphereShape3D_gdyl3")

[connection signal="frame_changed" from="PlayerSprite3D" to="." method="_on_player_sprite_3d_frame_changed"]
